# Mito

./: .gitignore  Makefile  README.md  lrs_agents-0.2.1-py3-none-any.whl  main  main.cpp  mito  package-lock.json  package.json  pnpm-lock.yaml  replit.md  requirements.txt
agents/: __init__.py  lrs_agent.py  rag.py
audit/: __init__.py
config/: __init__.py  logging.py  observability.py
converters/: __init__.py
crypto/: __init__.py
data/: store.py
datetime_utils/: __init__.py
deploy/: Dockerfile  docker-compose.yml
deploy/terraform/: main.tf
desktop/: index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts
desktop/src-tauri/: Cargo.toml
desktop/src-tauri/src/: lib.rs  main.rs
events/: __init__.py
features/: __init__.py
formatters/: __init__.py
generators/: __init__.py
health/: __init__.py
httpclient/: __init__.py
knowledge/: __init__.py
middleware/: __init__.py
msgqueue/: __init__.py
os_swap/: __init__.py
parsers/: __init__.py
pipeline/: __init__.py  async.py
plugins/: __init__.py
prompts/: __init__.py
providers/: __init__.py
resilience/: __init__.py
scheduler/: __init__.py
scripts/: chat.sh  completion.sh  download-model.sh  setup.sh  wizard.py
serializers/: __init__.py
server/: api.py
sessions/: __init__.py
strings/: __init__.py
tests/: test_ai_modules.py  test_infrastructure.py  test_plugins.py  test_server.py
toolbox/: package-lock.json  package.json
utils/: __init__.py  models.py
validators/: __init__.py
vectorstores/: __init__.py
web/: index.html
workflow/: __init__.py
(+557 files in other folders)
